traduction of the webpage www.khanacademie.nl/toolkit/using-data

--- a/templates/coach_resources/toolkit_content/using-data.html
+++ b/templates/coach_resources/toolkit_content/using-data.html
@@ -2,65 +2,65 @@
 
 {% block col1content %}
 		
-	<h1>Using data</h1>
+	<h1>Data gebruiken</h1>
 	<hr>
 	
-	<p class="lead">Recommended ways to use various KA data reports</p>
+	<p class="lead">Aanbevolen manieren om de KA data te gebruiken</p>
 	
-	<h3>Progress Summary</h3></p>
+	<h3>Voortgangsrapport</h3></p>
         <p class="has-media"><span class="toolkit-media"><a href="/images/toolkit/ProgressSummary2.jpg"><img width="100%" src="/images/toolkit/ProgressSummary.jpg"/></a></span>
 	<ul class="bullet"></p>
-		<li><strong>During class:</strong> use the filtering ability to home in on a specific exercise. Using the student data, assign peer tutors, hold a small group seminar, or directly tutor an individual</li>
-		<li><strong>The night or week before:</strong> check to see if there are specific exercises that groups of students might need help with and prepare to teach small group seminars in those exercises; set class goals based on this data (e.g., by the end of this week, I want everyone to move from the unstarted column to the proficient column)</li>
-		<li><strong>Weeks before the next unit:</strong> use the filter to look up exercises in the upcoming unit. Use the student data to determine which students need to focus on which concepts</li>
+		<li><strong>Tijdens de les:</strong>Gebruik de zoekfunctie om een specifieke oefening uit te lichten. Door gebruik te maken van de data kun je veel gerichter onderwijs geven. Mix leerlingen die bepaalde onderwerpen wel en niet machtig zijn of geef individuele uitleg aan leerlingen die dat nodig hebben.</li>
+		<li><strong>De dag of week van tevoren:</strong>kijk of er bepaalde oefeningen zijn waar meerdere leerlingen moeite mee hebben en bereid lessen voor dit onderwerp voor (voor de hele klas of alleen voor deze leerlingen). Stel bijvoorbeeld doelen in dat iedereen in de klas aan het eind van de week deze opgaven onder de knie moet hebben.</li>
+	<li><strong>Een week vook de volgende les:</strong>Bekijk welke oefeningen er straks behandeld gaan worden. Bepaal aan de hand van de statistieken van de leerlingen welke studenten zich op welke onderwerpen gaan richten.</li>
 	</ul>
 	<br>
-	<h3>Daily Activity Report</h3>
+	<h3>Dagelijks activiteiten verslag</h3>
         <p class="has-media"><span class="toolkit-media"><a href="/images/toolkit/DailyActivityReport.jpg"><img width="100%" src="/images/toolkit/DailyActivityReport2.jpg"/></a></span>
 	<ul class="bullet"></p>
-		<li><strong>During class:</strong> measure how engaged and on-task students are; you can even project this report to the class for a level of transparency</li>
-		<li><strong>Participation/Homework grades:</strong> if you are assigning a certain amount of time to be spent on KA per week, this report gives a rough approximation of how much time in and out of class students spend on KA</li>
+		<li><strong>Tijdens de les:</strong>Zie welke stof de klas aan het oefenen is en hoe snel dat gaat. Je kunt dit ook aan de klas zelf laten zien om ze te motiveren, of om met andere klassen te vergelijken.</li>
+		<li><strong>Deelneming/huiswerk:</strong>Je kunt bijvoorbeeld een tijd instellen die studenten aan Khan moeten besteden. Dit kan voor zowel video kijken als oefeningen maken gelden. Dit verslag geeft een globaal inzicht hoeveel er ook daadwerkelijk tijdens of na de les is gedaan.</li>
 	</ul>
 	<br>
-	<h3>Class Goals Report</h3>
+	<h3>Doelen</h3>
         <p class="has-media"><span class="toolkit-media"><a href="/images/toolkit/Goals.jpg"><img width="100%" src="/images/toolkit/GoalsReport.jpg"/></a></span>
 	<ul class="bullet"></p>
-		<li><strong>During class:</strong> use the filtering ability to determine which students are struggling with their goals.  Focus on those students by assigning a peer tutor, leading a small group, or directly working with those students.</li>
-		<li><strong>The night or week before:</strong> check to see if there are specific exercises that groups of students might need help with and prepare to teach small group seminars in those exercises; set class goals based on this data (e.g., by the end of this week, I want everyone to have completed four or more goals)</li>
-		<li><strong>Weeks before the next unit:</strong> if students are ready, have students set goals based on the next unit to gauge how prepared they will be</li>
+		<li><strong>Tijdens de les:</strong>Gebruik de filters om te zien welke leerlingen er moeite hebben om hun doelen te behalen. Richt je op die leerlingen door ze in een ander groepje te plaatsen, of richt je direct op deze leerling.</li>
+		<li><strong>De dag of week van tevoren:</strong>Controleer of er bepaalde opgaven zijn waar groepjes of individuen moeite mee hebben. Aan de hand van de gestelde doelen en opgaven waar leerlingen het moeilijk mee hebben kun je ze samen laten werken.</li>
+		<li><strong>Weken van tevoren:</strong>Laat leerlingen zelf doelen bepalen, en kijk naderhand of ze ze ook behaald hebben.</li>
 	</ul>
 	<br>
-	<h3>Progress Report</h3>
+	<h3>Voortgangsrapport</h3>
         <p class="has-media"><span class="toolkit-media"><a href="/images/toolkit/HeatMap.jpg"><img width="100%" src="/images/toolkit/ProgressReport2.jpg"/></a></span>
 	<ul class="bullet"></p>
-		<li><strong>Lesson planning:</strong> use this report to quickly see how the majority of students are doing within a particular exercise or use the filters to see where your class is struggling</li>
-		<li><strong>Individual attention:</strong> use the filtering abilities to check on specific students to see how they have been progressing overall, what they have been working on in the past couple days, and where they are struggling</li>
+		<li><strong>Lensplanning:</strong>Laat leerlingen zelf doelen bepalen, en kijk naderhand of ze ze ook behaald hebben.</li>
+		<li><strong>Individuele aandacht:</strong>Gebruik de filters om bepaalde leerlingen uit te lichten en bekijk hun voortgang. Zie waaraan gewerkt is en waar zij moeite mee hebben.</li> 
 	</ul>
 	<br>
-	<h3>Student Activity Report</h3>
+	<h3>Dagelijks activiteiten verslag</h3>
         <p class="has-media"><span class="toolkit-media"><a href="/images/toolkit/StudentActivity.jpg"><img width="100%" src="/images/toolkit/Activity.jpg"/></a></span>
 	<ul class="bullet"></p>
-		<li><strong>Individual attention:</strong> use when you want to take a closer look at how much time a student spent on KA and how that time was used over a day, week, or month. This data can help facilitate conversations around work ethic, recognition, accomplishments, and more</li>
+		<li><strong>Individuele aandacht:</strong>Hier kun je zien hoeveel tijd een leerling per dag, week of maand aan KA besteedt. Hier kun je precies zien waar leerlingen langer over doen, en wat zij sneller leren.</li> 
 	</ul>
 	<br>
 	<br>
-	<h3>Student Exercise Problems</h3>
+	<h3>Problemen per oefening</h3>
         <p class="has-media"><span class="toolkit-media"><a href="/images/toolkit/ExerciseProblems2.jpg"><img width="100%" src="/images/toolkit/ExerciseProblems.jpg"/></a></span>
 	<ul class="bullet"></p>
-		<li><strong>Individual attention:</strong> use when trying to diagnose a specific challenge that a student is having with an exercise.  All bars represent problems the student did, and you can click on them to see the answers the student gave and the hints he/she took</li>
+		<li><strong>Individuele aandach:</strong>Bekijk binnen een oefening welke sommen goed gaan, en welke niet. Ook kun je bijvoorbeeld zien na hoeveel seconden een hint wordt aangevraagd of hoeveel minuten video de leerling heeft gezien.</li>
 	</ul>
 	<br>
 	<br>
-	<h3>Student Focus Report</h3>
+	<h3>Focus</h3>
         <p class="has-media"><span class="toolkit-media"><a href="/images/toolkit/Focus2.jpg"><img width="100%" src="/images/toolkit/Focus.jpg"/></a></span>
 	<ul class="bullet"></p>
-		<li><strong>Individual attention:</strong> use when trying to grasp how students are spending their time over a day, week, or month.  This report can quickly show how students spend the majority of their time, which enables teachers to see if students are on task, struggling, or ready to move forward</li>
+		<li><strong>Individuaele aandach:</strong>: Zie precies aan welke onderwerpen een leerling in de afgelopen dag, week of maand heeft gewerkt. Zo zie je of leerlingen nog moeite hebben of dat zij klaar zijn om door te gaan naar een moeilijker onderwerp.</li>
 	</ul>
 	<br>
 	<br>
 	<br>
         <br>
-        <p><a href="{{base_url}}/individualized-units" class="call-to-action simple-button green">Next: Individualized units with KA  →</a></p>
+        <p><a href="{{base_url}}/ka-classrooms" class="call-to-action simple-button green">Ga naar de toolkit voor leraren  →</a></p>
 	
 {% endblock col1content %}	
 
