Fixes BH-189 spelling correction

--- a/javascript/profile-package/no-coaches.handlebars
+++ b/javascript/profile-package/no-coaches.handlebars
@@ -1,1 +1,1 @@
-<p>Je hebt momenteel geen coaches! Waarom voeg je geen coache toe?</p>
+<p>Je hebt momenteel geen coaches! Waarom voeg je geen coach toe?</p>
