Fixes BH-349 spelling mistake

--- a/templates/coach_resources/toolkit_content/ka-classrooms.html
+++ b/templates/coach_resources/toolkit_content/ka-classrooms.html
@@ -47,7 +47,7 @@
 		<h3>Handige links</h3>
 		<ul class="bullet">
 			<li><a href="/#watch">Bekijk onze video's</a></li>
-			<li><a href="/exercisedashboard">Oefenen rekenen en wiskunde met onze oefeningen</a></li>
+			<li><a href="/exercisedashboard">Oefen rekenen en wiskunde met onze oefeningen</a></li>
 		</ul>			
 </div>
 
