--- a/templates/viewbadges.html
+++ b/templates/viewbadges.html
@@ -69,7 +69,7 @@
             </td>
             <td style="text-align:center;">
                 <img src="/images/badges/master-challenge-blue-small.png" /><br/>
-                <strong>Uitdagingen badges</strong> zijn speciale badges die je alleen kunt verdienen als je een uitdaging van een onderwerp hebt voltooid.
+                <strong>Uitdagingen badges</strong> zijn speciale badges die je alleen kunt verdienen als je alle opgaven van een onderwerp hebt voltooid.
             </td>
         </tr>
     </table>
