Translation: Exerciseboard: Clear-->Wis

--- a/templates/macros/exercises.html
+++ b/templates/macros/exercises.html
@@ -26,7 +26,7 @@
     {%- endif -%}
     <div class="dashboard-drawer-inner fancy-scrollbar"><div>
        <div class="dashboard-filter">
-          <input type="text" class="dashboard-filter-text ui-corner-all simple-input" placeholder="Zoek in oefeningen" /><input type="button" value="Clear" class="dashboard-filter-clear simple-button ui-corner-right strict" style="display: none;"></input>
+          <input type="text" class="dashboard-filter-text ui-corner-all simple-input" placeholder="Zoek in oefeningen" /><input type="button" value="Wis" class="dashboard-filter-clear simple-button ui-corner-right strict" style="display: none;"></input>
        </div>
        <div class="exercise-list">
         <span class="exercise-sublist dashboard-suggested-exercises hide-on-dashboard-filter">
