--- a/templates/viewstudentlists.html
+++ b/templates/viewstudentlists.html
@@ -114,7 +114,7 @@
                 <a id="newlist-ok" class="simple-button" href="#">OK</a>
                 <a id="newlist-cancel" class="simple-button" href="#">Annuleer</a>
             </div>
-            <a id="newlist-button" class="simple-button" href="#">Maak nieuwe lijst</a>
+            <a id="newlist-button" class="simple-button" href="#">Maak nieuwe klas</a>
         </div>
 
         <div id="students-container">
