--- a/templates/viewstudentlists.html
+++ b/templates/viewstudentlists.html
@@ -33,7 +33,7 @@
     <span class="float-right student-controls">
         <div class="css-menu lists-css-menu">
             <ul>
-                <li>Voeg een lijst toe
+                <li>Voeg aan klas toe
                     <ul>
                         <li class="list-option-newlist">+ Maak een nieuwe lijst...</li>
                     </ul>
