--- a/stylesheets/shared-package/default.css
+++ b/stylesheets/shared-package/default.css
@@ -270,7 +270,7 @@ a:visited {
 a:link:hover, a:link:focus, a:visited:hover, a:visited:focus {
     /* TODO why was this color defined here?color: #26008F;*/
     text-decoration: underline;
-    color:BABABA;
+    color: #BABABA;
 }
 
 /*
@@ -491,7 +491,7 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 #navbar {
     min-height: 84px; /*navbar height*/
     width: 100%;
-    margin: 8px 20px 8px 0;
+    margin: 8px 0 8px 0;
     display: inline-block;
     text-align: right;
 }
@@ -829,6 +829,7 @@ span.username_and_notification .user-name {
 
 #user-info {
     float: right;
+    margin-right: 20px;
 }
 
 #user-info img {
@@ -922,7 +923,6 @@ span.username_and_notification .user-name {
 
 #search-box {
     margin:20px;
-    margin right:-200px;
 }
 
 #search-box form input {
@@ -939,6 +939,7 @@ span.username_and_notification .user-name {
 }
 
 #search-input {
+    margin-right: 20px;
     /* For jquery-ui autocomplete */
     z-index: 10;
     position: relative;
@@ -955,8 +956,8 @@ span.username_and_notification .user-name {
 }
 
 .simple-input:focus {
-    -webkit-box-shadow: inset 0 0 5px #c4c4c4
-    -moz-box-shadow: inset 0 0 5px #c4c4c4
+    -webkit-box-shadow: inset 0 0 5px #c4c4c4;
+    -moz-box-shadow: inset 0 0 5px #c4c4c4;
     box-shadow: inset 0 0 5px rgba(115, 152, 44, .5);
 }
 
@@ -1197,7 +1198,7 @@ span.youTube:hover {
 #library-content .library-content-header h2.topic-heading {
     margin-top: 38px;
     margin-bottom: 5px;
-    font-size: 18px
+    font-size: 18px;
     font-weight: bold;
 }
 
