--- a/templates/reportissue_template.html
+++ b/templates/reportissue_template.html
@@ -22,18 +22,14 @@ function submitForm(value)
         We horen het graag van je!
         </h2>
 				{% block exercise_warning %}{% endblock exercise_warning %}
-        <p>Als je geluk hebt, heeft iemand al
-        {% block submitted_the_issue %}je probleem gemeld.{% endblock submitted_the_issue %}
-        Je kunt je hier makkelijk bij aansluiten door te klikken op <b>de ster ernaast</b> in
-        de
-        {% block list_of_issues_link %}<a href="https://github.com/PerceptumNL/KhanLatest/issues">lijst van bekende problemen</a>{% endblock list_of_issues_link %}.
-        Wanneer dit niet het geval is, kun het beste de onderstaande stappen volgen om een nieuw probleem aan te maken in ons volgsysteem.
+        <p>
+        Je kunt jouw probleem doorgeven door het onderstaande digitale formulier in te vullen.
 
         <form method="POST" action="/reportissue">
         <label style="display:block;">Email</label>
         <input name="ucontact" type="text" id="issue-description" class="simple-input ui-corner-all blur-on-esc" placeholder="Email" style="width:400px"></input>
         <br />
-        <label style="display:block;">Titel</label>
+        <label style="display:block;">Onderwerp</label>
         <input name="title" type="text" id="issue-title" class="simple-input ui-corner-all blur-on-esc" placeholder="Titel" style="width:400px"/>
         <br />
         <label style="display:block;">Beschrijving van het probleem</label>
@@ -44,10 +40,10 @@ function submitForm(value)
         <input type="submit" text="Submit"></input>
         </form>
 
-        <p>Jouw bijdrage zal in de lijst opgenomen worden nadat wij het probleem bekeken hebben.
-        <p>Wanneer je je aansluit bij een bestaand probleem, of wanneer je een nieuw probleem aanmaakt, zul je e-mails ontvangen wanneer mensen op het probleem reageren.&nbsp;
-        Wanneer wij denken dat we het probleem hebben opgelost zul je een e-mail ontvangen waarin staat "Status: Probleem verholpen", en je zult zelf het verschil zien
-        bij de volgende keer dat we de site upgraden. Wanneer je geen e-mails meer wilt krijgen, volg dan de Link in één van de e-mails en klik op de ster. 
+        <p>Bedankt voor melden van jouw probleem!
+        <p>
+        Wanneer wij denken dat we het probleem hebben opgelost zul je een e-mail ontvangen en je zult zelf het verschil zien
+        bij de volgende keer dat we de site upgraden.  
         </p>
         <p><em>Hartelijk dank dat je de tijd neemt om ons te helpen met het verbeteren van de Khan Academie!</em></p>
 </article>
