--- a/javascript/exercises-package/end-of-stack-card.handlebars
+++ b/javascript/exercises-package/end-of-stack-card.handlebars
@@ -80,7 +80,7 @@
                 {{#if exerciseStates.reviewing}}
                 {{#unless exerciseStates.justEarnedProficiency}}
                 <span class="hover-disclosure review-explain" data-desc="Je beheerst deze vaardigheid beter, maar we denken dat je de stof nog een keer moet herhalen wegens problemen in de laaste fase.">
-                    Why is the bar orange?
+                    Waarom is de balk oranje?
                 </span>
                 {{/unless}}
                 {{/if}}
