--- a/javascript/exercises-package/exercise-header.handlebars
+++ b/javascript/exercises-package/exercise-header.handlebars
@@ -3,7 +3,7 @@
 <div class="topic-exercise-badge">
 	<span class="topic-exercise-image">&nbsp;<!-- Review doesn't have a badge image, just a placeholder --></span>
 </div>
-Review
+Herhalen
 {{else}}
     {{#if practiceMode}}
 	<div class="topic-exercise-badge">
