added link to the wiki in the navigation bar

--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -281,6 +281,11 @@
                                         Handleiding
                                     </a>
                                 </li>
+                                <li>
+                                    <a href="http://wiki.khanacademie.nl/" data-tag="Header" class="about-link">
+                                    Wiki
+                                    </a>
+                                </li>
                                 <!--
                                 <li>
                                     <a href="{% if user_data.is_demo %}
