removed margin-top from .page-search

--- a/stylesheets/shared-package/default.css
+++ b/stylesheets/shared-package/default.css
@@ -934,7 +934,7 @@ span.username_and_notification .user-name {
 .page-search {
     display: block;
     padding: 0;
-    margin-top: 52px;
+    /*margin-top: 52px;*/ /*REMOVED MARGIN-TOP*/
     margin-right:-16px;
 }
 
