Changed body to different orange

--- a/stylesheets/shared-package/default.css
+++ b/stylesheets/shared-package/default.css
@@ -65,7 +65,7 @@ body {
     margin: 0;
     color: #444;
     /*background: #f5f5f5;*/
-    background: orange;
+    background: #F48123;
     line-height: 22px;
 }
 
