new page templates

--- a/templates/browsepage.html
+++ b/templates/browsepage.html
@@ -3,8 +3,8 @@
 {% block pagetitle %}{% endblock pagetitle %}
 {% block pagecontent %}
         <div class="clear"></div>
-
+        <h3>This is a new page</h3>
         {{ library_content }}
-
+        <h2>Hello again...</h2>
         
 {% endblock pagecontent %}
