--- a/templates/new_page.html
+++ b/templates/new_page.html
@@ -1,10 +1,11 @@
 <!-- new_page.html -->  
+<!DOCTYPE>
 <html>  
   <head>  
     <title>A new Page!</title>  
   </head>  
  <body>  
   <h1>You made a new page...</h1>
-  {{ some_value }}  
+  <p>{{ some_value }}</p>  
  </body>  
 </html>
