New files for browse_page

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -17,7 +17,7 @@
                     {#
                     <td class="social-action">
                         <span id="fb-like-badge">
-                            <div id="fb-root"></div><fb:like href="http://www.khanacademie.nl" send="true" layout="button_count" width="100" show_faces="false" font=""></fb:like>
+                            <di id="fb-root"></div><fb:like href="http://www.khanacademie.nl" send="true" layout="button_count" width="100" show_faces="false" font=""></fb:like>
                         </span>
                     </td>
                     #}
