Files for new /browse page

--- a/templates/old_homepage.html
+++ b/templates/old_homepage.html
@@ -47,32 +47,7 @@
             </table>
         </div>
         <div class="clear"></div>
-        <div id="homepage-welcome-container">
-            <iframe id="homepage-video" src="http://www.youtube.com/embed/tC80BNOKJtk"
-                    frameborder="0"
-                    allowfullscreen></iframe>
-            <div id="homepage-text-container" class="visited-no-recolor">
-                <div id="homepage-text">
-                    <div id="main-video">
-
-                    </div>
-                    <h1>
-                        Welkom bij Khan Academie
-                    </h1>
-
-                    <p>
-                        Wij zijn op een missie om jou te helpen alles te leren, over onderwerpen 
-            die jou interesseren, wanneer jij het wilt en in je eigen tempo. De 
-            uiteenlopende onderwerpen worden met een groeiend aantal
-            aangeboden in de vorm van video’s en oefeningen. 
-                    </p>
-
-                <a href="/exercisedashboard" class="rollover begin-link">
-                        <img src="/images/oefeningen-button-blauw.png" rel="/images/oefeningen-button-grijs.png" class="begin-button rollover"/><span id="exercisehomelink"><em>Begin met oefenen!</em></span>
-                </a>
-                </div>
-            </div>
-        </div>
+{# HOMEPAGE WELCOME CONTAINER WOZ HERE #}
 
         {% if thumbnail_link_sets %}
             <div style="display:none" id="thumbnails_container">
